[project]
name = "langgraph-persistance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "langgraph-persistance",
]
